--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title></title>
   <body>
     <h1>this is my daughter</h1>
-    <img url ="https://cdn.discordapp.com/attachments/966491171142631444/1089110531396354150/20230325165017.jpg"/>
+    <img src ="https://cdn.discordapp.com/attachments/966491171142631444/1089110531396354150/20230325165017.jpg"/>
   
   </body>
 </html>
